tests/cases/compiler-development/artifact/errors/diagnostic-trait-method-ambiguous.diagnostic
diagnostic error code=T0001 family=type message="method call 'score' for type i64 is ambiguous" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-trait-method-ambiguous.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-trait-method-ambiguous.ari" bytes=298
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-trait-method-ambiguous.ari" line=23 column=16 end_line=23 end_column=21 byte_start=287 byte_end=292 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-trait-method-ambiguous.ari:23:16\n    |\n 23 |   return value.score();\n    |                ^^^^^"
